--- a/Languages/Programming_Languages/c++/C++11_14_17_20/README.adoc
+++ b/Languages/Programming_Languages/c++/C++11_14_17_20/README.adoc
@@ -2,7 +2,7 @@
 :toclevels: 4
 
 == https://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/[C++11]
-=== https://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/[attributes]
+=== :cpp-url: https://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/[attributes]
 ```c
 carries_dependency
 depreacated
